--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=80
-spring.datasource.url = jdbc:mysql://127.0.0.1:8889/tienda?serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://127.0.0.1:8889/verduleria?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name= com.mysql.jdbc.Driver
