--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Practica Examen</description>
 	<properties>
 		<java.version>17</java.version>
+	 <maven.compiler.source>15</maven.compiler.source>
+	 <maven.compiler.target>15</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -46,10 +48,17 @@
 	  <groupId>mysql</groupId>
 	  <artifactId>mysql-connector-java</artifactId>
 	  <scope>runtime</scope>
+           <version>8.0.29</version>
 	 </dependency>
 	 <dependency>
 	  <groupId>org.springframework.boot</groupId>
 	  <artifactId>spring-boot-starter-data-jpa</artifactId>
+          <version>2.7.0</version>
+	 </dependency>
+          <dependency>
+	  <groupId>jakarta.persistence</groupId>
+	  <artifactId>jakarta.persistence-api</artifactId>
+	  <type>jar</type>
 	 </dependency>
 	</dependencies>
 
