--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 	 <dependency>
 	  <groupId>org.springframework.boot</groupId>
 	  <artifactId>spring-boot-starter-data-jpa</artifactId>
+	  <version>2.7.1</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.wisdom-framework</groupId>
+	  <artifactId>mysql-connector-java</artifactId>
+	  <version>5.1.34_1</version>
 	 </dependency>
 	</dependencies>
 
