--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=80
-spring.datasource.url = jdbc:mysql://127.0.0.1:8889/verduleria?serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost/verduleria?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name= com.mysql.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=SqlforWeb61120.
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl.auto=update
